--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,6 +1,7 @@
 @import './variables.less';
 @import './button.less';
 @import './typography.less';
+@import './input.less';
 
 .hidden {
   display: none !important;
