--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -11,9 +11,10 @@
 
 @light: #fff;
 @dark: #505050;
+@muted: #f3f3f4;
 
 @shadow: 0 0 15px #e8e8e8;
 
 @font-size: 14px;
-@border-radius: 3px;
+@border-radius: 2px;
 
