Input title and hint.

--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -1,7 +1,7 @@
 .btn {
   display: inline-block;
   position: relative;
-  margin: 5px;
+  margin: 0 5px;
   color: @light;
   border-radius: @border-radius;
   cursor: pointer;
