--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,6 +2,7 @@
 @import './button.less';
 @import './typography.less';
 @import './input.less';
+@import './dropdown.less';
 
 .hidden {
   display: none !important;
