--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -1,11 +1,11 @@
 .btn {
   display: inline-block;
   position: relative;
-  margin: 0 5px;
-  color: @light;
+  margin: 5px;
   border-radius: @border-radius;
   cursor: pointer;
   user-select: none;
+
 
   .btn-type-mixin(@fontcolor, @fillcolor, @bordercolor) {
     &:not(.disabled) {
