--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -3,6 +3,7 @@
 @import './typography.less';
 @import './input.less';
 @import './dropdown.less';
+@import './select.less';
 
 .hidden {
   display: none !important;
