--- a/src/styles/input.less
+++ b/src/styles/input.less
@@ -18,7 +18,7 @@
       cursor: not-allowed;
     }
     input {
-      background: darken(@light, 7%) !important;
+      background: #f9f9f9 !important;
       border-color: darken(@bg, 10%) !important;
     }
   }
