--- a/src/styles/input.less
+++ b/src/styles/input.less
@@ -19,7 +19,7 @@
     }
     input {
       background: #f9f9f9 !important;
-      border-color: darken(@bg, 10%) !important;
+      border-color: @border-color !important;
     }
   }
   .input-icon-left,
@@ -32,7 +32,7 @@
       color: darken(@bg, 15%);
     }
     input {
-      border-color: darken(@bg, 10%);
+      border-color: @border-color;
     }
   }
   &.input-primary {
