--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -266,7 +266,7 @@
       color: darken(@bg, 15%);
     }
     .Select-control {
-      border-color: darken(@bg, 10%);
+      border-color: @border-color;
     }
     .Select.Select--multi .Select-value {
       background: @light;
