--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -3,7 +3,6 @@
 
 
 @primary: #005d98;
-@secondary: #fff;
 @success: #00C851; 
 @info: #0099CC;
 @warning: #ffbb33;
@@ -14,6 +13,7 @@
 @muted: #9c9c9c;
 
 @bg: #f9f9f9;
+@border-color: #e0e0e0;
 
 @shadow: 0 0 15px #e8e8e8;
 
