--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -4,6 +4,7 @@
 @import './input.less';
 @import './dropdown.less';
 @import './select.less';
+@import './checkbox.less';
 
 .hidden {
   display: none !important;
