Toggle Switch component.

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -5,6 +5,7 @@
 @import './dropdown.less';
 @import './select.less';
 @import './checkbox.less';
+@import './toggle-switch.less';
 
 .hidden {
   display: none !important;
