--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,6 +6,7 @@
 @import './select.less';
 @import './checkbox.less';
 @import './toggle-switch.less';
+@import './radio-group.less';
 
 .hidden {
   display: none !important;
