--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -7,6 +7,7 @@
 @import './checkbox.less';
 @import './toggle-switch.less';
 @import './radio-group.less';
+@import './tooltip.less';
 
 .hidden {
   display: none !important;
