--- a/src/styles/dropdown.less
+++ b/src/styles/dropdown.less
@@ -2,13 +2,18 @@
   position: relative;
   display: inline-block;
   .dropdown-menu {
+    &.invisible {
+      opacity: 0;
+    }
     position: absolute;
+    transition: opacity .25s ease-in-out;
     z-index: 10;
     width: auto;
     margin: 2px 5px;
     background: @light;
     border: 1px solid darken(@bg, 3%);
-    box-shadow: 0px 4px 15px 0px darken(@bg, 10%);
+    //box-shadow: 0px 4px 15px 0px darken(@bg, 10%);
+    box-shadow: @shadow;
     border-radius: @border-radius;
     top: 100%;
     right: 0;
