Tooltip styles updated.

--- a/src/styles/tooltip.less
+++ b/src/styles/tooltip.less
@@ -72,10 +72,9 @@
     background-color: @tooltip-background;
     color: @light;
     text-align: center;
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: @border-radius;
     white-space: nowrap;
-    box-shadow: @shadow;
     &::after {
       content: " ";
       position: absolute;
