--- a/src/styles/input.less
+++ b/src/styles/input.less
@@ -2,6 +2,8 @@
   position: relative;
   display: inline-block;
   margin: 5px;
+  margin-right: -12px;
+  min-width: 317px;
   input {
     display: block;
     outline: none;
