--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -8,6 +8,7 @@
 @import './toggle-switch.less';
 @import './radio-group.less';
 @import './tooltip.less';
+@import './form-group.less';
 
 .hidden {
   display: none !important;
