--- a/src/styles/checkbox.less
+++ b/src/styles/checkbox.less
@@ -1,11 +1,18 @@
 .checkbox {
   display: inline-block;
   margin: 5px;
+  align-self: center;
   &:not(.disabled){
     cursor: pointer;
+    & * {
+      cursor: pointer;
+    }
   }
   &.disabled {
     cursor: not-allowed;
+    & * {
+      cursor: not-allowed;
+    }
   }
   &:not(.checked){
     .checkbox-box {
@@ -63,7 +70,7 @@
   }
   .checkbox-label {
     position: relative;
-    top: -1px;
+    vertical-align: top;
     padding-left: 5px;
     user-select: none;
   }
