--- a/src/styles/radio-group.less
+++ b/src/styles/radio-group.less
@@ -4,7 +4,13 @@
   margin: 5px;
   .radio {
     display: block;
-    margin: 5px 0;
+    margin: 5px 10px 0 0;
+    &:first-child {
+      margin-top: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
     user-select: none;
     &:not(.disabled) {
       cursor: pointer;
@@ -33,7 +39,7 @@
     .radio-label {
       display: inline-block;
       position: relative;
-      top: -4px;
+      vertical-align: top;
       margin-left: 5px;
     }
   }
