--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -1,7 +1,8 @@
 .react-select-wrapper {
+  top: -1px;
   text-align: left;
   display: inline-block;
-  min-width: 250px;
+  min-width: 300px;
   position: relative;
   margin: 5px;
   .is-disabled {
@@ -48,6 +49,7 @@
   }
   
   .Select {    
+    width: 100%;
     &.is-focused:not(.is-open) > .Select-control {
       box-shadow: none !important;
     }
@@ -62,7 +64,7 @@
     }
   }
   &.select-xs {
-    top: 12px;
+    //top: 12px;
     .Select.Select--single .Select-value {
       top: -7px;
     }
@@ -102,7 +104,7 @@
     }
   }
   &.select-sm {
-    top: 15px;
+    //top: 15px;
     .Select.Select--single .Select-value {
       top: -5px;
     }
@@ -142,7 +144,7 @@
     }
   }
   &.select-md {
-    top: 18px;
+    //top: 18px;
     .Select.Select--single .Select-value {
       top: -4px;
     }
@@ -182,7 +184,7 @@
     }
   }
   &.select-lg {
-    top: 21px;
+    //top: 21px;
     .Select.Select--single .Select-value {
       top: -2px;
     }
@@ -222,7 +224,7 @@
     }
   }
   &.select-xl {
-    top: 22px;
+    //top: 22px;
     .Select.Select--single .Select-value {
       top: -2px;
     }
