--- a/src/styles/toggle-switch.less
+++ b/src/styles/toggle-switch.less
@@ -3,6 +3,7 @@
   position: relative;
   height: 16px;
   width: 40px;
+  max-width: 40px;
   margin: 10px 23px;
   border-radius: 10px;
   border-style: solid;
