Tag component stub

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -9,6 +9,7 @@
 @import './radio-group.less';
 @import './tooltip.less';
 @import './form-group.less';
+@import './tag.less';
 
 .hidden {
   display: none !important;
