--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -10,6 +10,7 @@
 @import './tooltip.less';
 @import './form-group.less';
 @import './tag.less';
+@import './badge.less';
 
 .hidden {
   display: none !important;
